# H2Q-Evo

./: .env  .env.example  .gitattributes  .gitignore  00_START_HERE.md  236b_basic_inference_test.json  236b_benchmark_database.json  236b_quality_test_results.json  24H_EVOLUTION_GUIDE.md  ACADEMIC_ENGINEERING_VALUE_ASSESSMENT.md  ACCEPTANCE_AUDIT_REPORT_V2_3_0.json  ACCEPTANCE_REPORT_V2_3_0.md  ADVANCEMENT_PROOF_REPORT.md  AGI_BENCHMARK_REPORT.json  AGI_CAPABILITY_REPORT.md  AGI_CAPABILITY_VALIDATION_REPORT.md  AGI_DEPLOYMENT_COMPLETE_REPORT.md  AGI_EVOLUTION_COMPLETION_REPORT.md  AGI_GAP_ANALYSIS_AND_IMPLEMENTATION.md  AGI_GAP_ANALYSIS_FINAL_REPORT.md  AGI_INTEGRATION_TEST_REPORT.md  AGI_LONG_TERM_EVOLUTION_README.md  AGI_PERFORMANCE_ANALYSIS_REPORT.json  AGI_PROBLEM_SOLVER_FORMALIZATION_REPORT.md  AGI_QUICK_START.md  AGI_SUPERIORITY_FINAL_REPORT.md  AGI_SYSTEM_STATUS_REPORT.md  AGI_TRAINING_SYSTEM_README.md  ARCHITECTURE_ANALYSIS_COMPLETION_SUMMARY.md  ARCHITECTURE_COMPETITIVE_ANALYSIS.md  AUDIT_CORRECTION_NOTICE.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_METRICS_ACADEMIC_SIGNIFICANCE.md  AUDIT_PASS_CERTIFICATE.md  AUDIT_VALUE_ANALYSIS.md  AUTONOMOUS_ENTITY_COMPLETE_DOCUMENTATION_INDEX.md  AUTONOMOUS_ENTITY_DELIVERY_SUMMARY.txt  AUTONOMOUS_ENTITY_VISION_AND_IMPLEMENTATION_ROADMAP.md  An_Axiomatic_System_for_Directional_Construction_Based_on_Group_Theory.txt  BENCHMARK_ANALYSIS_REPORT.md  (+662 more)
.evo_sandbox/: last_response_code_parse_failure.txt
.github/: copilot-instructions.md
agi_backups/: system_state_20260125_015117.json
agi_evolution_loss_checkpoints/: checkpoint_gen_1.pt
agi_persistent_training/: evolution_state.json
archive/: test_all_executables.py  test_capability_fix.py  train_model_a.py  train_model_b.py
benchmark_results/: learning_eval_20260129_184521.json  learning_eval_20260129_190844.json  learning_eval_20260129_191356.json  learning_eval_20260129_191834.json  learning_eval_20260129_192534.json  learning_eval_20260129_192552.json  learning_eval_20260129_192617.json  learning_eval_20260129_192642.json  learning_eval_20260129_192707.json  learning_eval_20260129_192750.json  learning_eval_20260129_192814.json  learning_eval_20260129_193439.json  learning_eval_20260129_194131.json  learning_eval_20260129_194556.json  learning_eval_20260129_200336.json  learning_eval_20260129_202207.json  learning_eval_20260129_202615.json  learning_eval_20260129_203139.json  learning_eval_summary_20260129.md  local_public_benchmark_20260129_172557.json  local_public_benchmark_20260129_172643.json  public_benchmark_20260128_194208.json  public_benchmark_20260128_211951.json  public_benchmark_20260129_172412.json
checkpoints/: best_model_epoch_1.pth  best_model_epoch_3.pth  checkpoint_metadata.json
complete_evolution_results/: complete_demo_20260122_123555.json  complete_demo_20260122_124309.json  complete_demo_20260122_124607.json  complete_demo_20260122_125913.json  complete_demo_20260122_130200.json  complete_demo_20260122_130813.json  complete_demo_20260122_130935.json
docs/: DOCUMENTATION_INDEX.md  H2Q_SYSTEM_CONTROL_EVALUATION.md  MATHEMATICAL_OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_PROGRESS_REPORT.md  STRUCTURE_OVERVIEW.md
evolution_results/: evolution_2b491c26.json  evolution_39c98eba.json  evolution_5bf7e29f.json  evolution_5e814bdd.json  evolution_790a4247.json  evolution_869c0ead.json  evolution_e1a8044b.json
experiment_checkpoints/: checkpoint_1769277648.json
experiment_reports/: small_scale_report_1769277648.json
h2q_cli/: __init__.py  (+3 more)
(+3030 files in other folders)
